// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> error renders 1`] = `
<div>
  <input
    aria-describedby="form-0_mock--error"
    aria-labelledby="form-0_mock--label"
    id="form-0_mock"
    type="checkbox"
  />
  <label
    for="form-0_mock"
    id="form-0_mock--label"
  >
    Example
  </label>
  <span
    id="form-0_mock--error"
    role="alert"
  >
    Error
  </span>
</div>
`;

exports[`<Checkbox /> help renders 1`] = `
<div>
  <input
    aria-labelledby="form-0_mock--label"
    id="form-0_mock"
    type="checkbox"
  />
  <label
    for="form-0_mock"
    id="form-0_mock--label"
  >
    Example
    <span>
      Help
    </span>
  </label>
</div>
`;

exports[`<Checkbox /> label renders 1`] = `
<div>
  <input
    aria-labelledby="form-0_mock--label"
    id="form-0_mock"
    type="checkbox"
  />
  <label
    for="form-0_mock"
    id="form-0_mock--label"
  >
    Label
  </label>
</div>
`;

exports[`<Checkbox /> renders 1`] = `
<div>
  <input
    aria-labelledby="form-0_mock--label"
    id="form-0_mock"
    type="checkbox"
  />
  <label
    for="form-0_mock"
    id="form-0_mock--label"
  >
    Example
  </label>
</div>
`;
